New in svn version:

   * dynmat.x can calculate phonon contribution to dielectric tensor
   * CELL_PARAMETERS written on output using the same format as in input
   * turboTDDFT now supports hybrid functionals (only with norm-conserving
     psudopotentials.)

Fixed in svn version:

   * PW, PP, PHonon: files for DFT+U produced by previous versions
     could no longer be read
   * PHonon: restart with convt=.true. was not working with PAW
   * PHonon: in matdyn.x, displacement patterns were no longer correct
     if eigenvectors of the dynamical matrix were also written to file
   * PHonon: compatibility with files produced by previous releases
     was broken if pool were used
   * PHonon: the recently introduced symmetry Sq=-q+G has still some problem:
     currently disabled
   * divide_class: wrong check for T_h
   * PHonon: effective charges eu + PAW were not accurate with pools;
     effective charges eu + US PP + spin-orbit nonmagnetic were not
     working in parallel.
   * Bug fix for NC pseudos with GIPAW info, for upf version 2 only:
     Pseudo local potential was incorrectly written and read. 
   * PP: incorrect check in bands.f90 (v.5.0.2 only)
   * CP wasn't working properly with USPP having distinct Q functions 
     for each value of l, due to the never ending l/l+1 problem

Incompatible changes in svn version:
   * calls to "find_equiv_sites" and "writemodes" changed (fixed dimension
     "nax" removed)

New in 5.0.2 version:

   * DFT+U with on-site occupations from pseudopotential projectors;
     DFT+U+J (both experimental)
   * Calculation of orbital magnetization (experimental)

Fixed in 5.0.2 version:

   * the random-number generator wasn't checking for incorrect seeding;
     under some unlikely circumstances this might lead to strange errors
   * k-point parallelization in v.5.0 and 5.0.1 was affected by a subtle 
     problem: the distribution of plane waves was not always the same on 